--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,35 +8,26 @@ on:
 
 jobs:
   laravel-tests:
+
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v4
+    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
-        extensions: mbstring, pdo, pdo_sqlite, sqlite3
-        ini-values: memory_limit=2G
-
+    - uses: actions/checkout@v4
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
     - name: Install Dependencies
       run: composer install --no-interaction --prefer-dist
-
     - name: Generate key
       run: php artisan key:generate
-
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
-
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
